Update python-cinderclient to 3.3.0
Depends-on: If69bdee2e78589773d25c1d5ccdc3122bd9ec431
Change-Id: I0efb33390e316485f2b915f6db74198befa39710

--- a/openstack/python-cinderclient/python-cinderclient.spec.j2
+++ b/openstack/python-cinderclient/python-cinderclient.spec.j2
@@ -1,6 +1,6 @@
 %global sname python-cinderclient
 Name:           {{ py2name('python-cinderclient') }}
-Version:        3.2.0
+Version:        3.3.0
 Release:        0
 Summary:        Python API and CLI for OpenStack Cinder
 License:        {{ license('Apache-2.0')}}
@@ -73,7 +73,7 @@ install -p -D -m 644 tools/cinder.bash_completion %{buildroot}%{_sysconfdir}/bas
 
 %check
 rm cinderclient/tests/unit/test_shell.py
-%{__python2} setup.py testr
+ostestr
 
 %files
 %license LICENSE
