Add heatclient as dependency
Heat is one of the more common plugins to openstackclient,
so we want to always install it

Change-Id: I71ac39676f7886bdcfbfc1910bdc429c5895a6df

--- a/openstack/python-openstackclient/python-openstackclient.spec.j2
+++ b/openstack/python-openstackclient/python-openstackclient.spec.j2
@@ -32,6 +32,7 @@ Requires:       {{ py2pkg('Babel') }}
 Requires:       {{ py2pkg('python-cinderclient') }}
 Requires:       {{ py2pkg('cliff') }}
 Requires:       {{ py2pkg('python-glanceclient') }}
+Requires:       {{ py2pkg('python-heatclient') }}
 Requires:       {{ py2pkg('keystoneauth1') }}
 Requires:       {{ py2pkg('python-keystoneclient') }}
 Requires:       {{ py2pkg('python-novaclient') }}
